--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
 
 .container {
   min-width: 320px;
+
   padding-left: 16px;
   padding-right: 16px;
   margin-left: auto;
@@ -1480,8 +1481,12 @@ input[type="checkbox"]:checked ~ .checkbox-label > .custom-checkbox {
 
 .menu-container {
   position: fixed;
+
   top: 0;
   left: 0;
+
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   padding: 80px 40px 40px;
@@ -1501,7 +1506,8 @@ input[type="checkbox"]:checked ~ .checkbox-label > .custom-checkbox {
 }
 
 .mobile-menu-list {
-  margin-bottom: 284px;
+  /* margin-bottom: 284px; */
+  margin-bottom: auto;
 }
 
 .mobile-menu-link {
