--- a/css/style.css
+++ b/css/style.css
@@ -1060,13 +1060,25 @@ what-are .customers-item {
 
 .filters-portfolio {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  row-gap: 16px;
+  column-gap: 24px;
 
-  margin-bottom: 72px;
+  margin-bottom: 48px;
 }
 
-.button-filters {
+@media only screen and (min-width: 768px) {
+  .filters-portfolio {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+
+    margin-bottom: 72px;
+  }
+}
+
+.filters-portfolio-item .button-filters {
   color: var(--logo-brand);
   background-color: var(--light-backgroung);
   text-align: center;
@@ -1099,13 +1111,37 @@ what-are .customers-item {
 
 .menu-portfolio {
   display: flex;
-  row-gap: 48px;
-  column-gap: 24px;
+  gap: 48px;
   flex-wrap: wrap;
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-portfolio {
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .menu-portfolio {
+    display: flex;
+    row-gap: 48px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+  }
 }
 
 .menu-portfolio-item {
   width: calc((100% - 48px) / 3);
+}
+
+@media only screen and (min-width: 768px) {
+   {
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .menu-portfolio-item {
+    width: calc((100% - 48px) / 3);
+  }
 }
 
 .link-illustration {
